--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -51,7 +51,7 @@
                         <ComboBox x:Name="CbCountries" Canvas.Left="234" Canvas.Top="191" Width="172" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
                         <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto                             " Canvas.Left="737" Canvas.Top="508" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
                         <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="243" Width="64" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278" Canvas.Left="761" Height="23"/>
-                        <TextBox x:Name="tbReceiptFile" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="243" Width="175" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White" Canvas.Left="581"/>
+                        <TextBox x:Name="tbReceiptFile" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="243" Width="175" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White" Canvas.Left="581" IsEnabled="False"/>
                         <TextBox x:Name="tbSum" Height="23" TextWrapping="Wrap" Text="" Canvas.Top="508" Width="67" RenderTransformOrigin="0.5,0.5" Background="Black" Foreground="White" Canvas.Left="659">
                             <TextBox.RenderTransform>
                                 <TransformGroup>
@@ -64,7 +64,7 @@
                         </TextBox>
                         <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto                             " Canvas.Left="434" Canvas.Top="508" Width="89" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="#FFCBCBCB" Foreground="White" Background="Black" Click="btnRemoveSelectedReceipt_Click" Height="21"/>
                         <Label Content="Välj kvitto/belopp                        " Canvas.Top="237" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" Width="174" Canvas.Left="434" FontFamily="Myriad Pro"/>
-                        <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="963" Canvas.Top="486" Width="254" BorderBrush="#FFCBCBCB" Foreground="White" Height="43" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="Black" FontFamily="Myriad Pro"/>
+                        <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="963" Canvas.Top="486" Width="264" BorderBrush="#FFCBCBCB" Foreground="White" Height="43" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="Black" FontFamily="Myriad Pro"/>
                         <Label Content="Maxbelopp" Canvas.Left="231" Canvas.Top="214" Width="200" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="236" Canvas.Top="275" Width="93" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Height="20" Click="btnSaveStartCountry_Click" RenderTransformOrigin="0.575,0.45"/>
                         <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="236" Canvas.Top="241" RenderTransformOrigin="1.556,2.432" Width="93"/>
@@ -102,7 +102,7 @@
                         <CheckBox x:Name="CHBLunch" Content="Lunch" Canvas.Left="236" Canvas.Top="342" Background="White" Foreground="White"/>
                         <CheckBox x:Name="CHBDinner" Content="Middag" Canvas.Left="236" Canvas.Top="363" Background="White" Foreground="White"/>
                         <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="66" TextWrapping="Wrap" Text="TextBox" Canvas.Top="25" Width="120"/>
-                        <TextBox x:Name="tbTotalRecieptAmount" Height="23" Canvas.Left="663" TextWrapping="Wrap" Text="TextBox" Canvas.Top="534" Width="120"/>
+                        <TextBox x:Name="tbTotalRecieptAmount" Height="23" Canvas.Left="663" TextWrapping="Wrap" Text="0" Canvas.Top="534" Width="120" IsEnabled="False"/>
 
 
                     </Canvas>
