--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -19,7 +19,7 @@
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="0*"/>
             </Grid.ColumnDefinitions>
-            <TabControl Grid.ColumnSpan="7" BorderBrush="Black" Margin="0,0,-629,-106" HorizontalAlignment="Left" Width="1281" Height="1069" VerticalAlignment="Top" Grid.RowSpan="2" SelectionChanged="TabControl_SelectionChanged" FontFamily="Myriad Pro">
+            <TabControl Grid.ColumnSpan="7" BorderBrush="Black" Margin="0,3,-629,-108.8" HorizontalAlignment="Left" Width="1281" Height="1069" VerticalAlignment="Top" Grid.RowSpan="2" SelectionChanged="TabControl_SelectionChanged" FontFamily="Myriad Pro">
                 <TabControl.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -126,27 +126,27 @@
                 <TabItem Header="Chef" HorizontalAlignment="Right" Width="211" Margin="0,-1,-99,1" Background="#FF7B9CE2" BorderBrush="{x:Null}" Foreground="Black" Height="63" FontSize="14" FontWeight="Bold" FontFamily="Myriad Pro" >
                     <Canvas Margin="10,86,81,390">
                         <Label x:Name="lbUsers" Content="Användare" Canvas.Left="10" Width="100" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.48,0.724" Canvas.Top="-74" FontFamily="Myriad Pro" />
-                        <Label x:Name="lbUsernameLabel" Content="Användarnamn" Canvas.Left="503" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" Canvas.Top="-30" FontFamily="Myriad Pro"/>
-                        <Label x:Name="lbPasswordLabel" Content="Lösenord" Canvas.Left="505" Width="93" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" Canvas.Top="-1" FontFamily="Myriad Pro"/>
-                        <Button x:Name="btnAddUser" Content="Lägg till" Canvas.Left="505" Canvas.Top="219" Width="123" RenderTransformOrigin="0.5,0.5" Click="Button_Click" Foreground="White" Background="Black" TabIndex="25"/>
-                        <Label Content="Chef" Canvas.Left="505" Canvas.Top="176" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                        <Label x:Name="lbUsernameLabel" Content="Användarnamn" Canvas.Left="503" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro" Canvas.Top="5"/>
+                        <Label x:Name="lbPasswordLabel" Content="Lösenord" Canvas.Left="505" Width="93" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro" Canvas.Top="34"/>
+                        <Button x:Name="btnAddUser" Content="Lägg till" Canvas.Left="505" Canvas.Top="254" Width="123" RenderTransformOrigin="0.5,0.5" Click="Button_Click" Foreground="White" Background="Black" TabIndex="25"/>
+                        <Label Content="Chef" Canvas.Left="505" Canvas.Top="211" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <Label x:Name="lbLoggedIn" Content="Inloggad:" Canvas.Left="503" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" Canvas.Top="-79" FontFamily="Myriad Pro"/>
                         <Label x:Name="lbLoggedInUser" Content="" Canvas.Left="628" Width="121" Foreground="White" FontWeight="Bold" FontSize="12" BorderBrush="White" Height="29" Canvas.Top="-79"/>
-                        <Label x:Name="lbFirstName" Content="Förnamn" Canvas.Left="505" Canvas.Top="87" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
-                        <TextBox x:Name="tbFirstName" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="94" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" RenderTransformOrigin="0.505,-3.09" TabIndex="3"/>
-                        <Label x:Name="lbLastName" Content="Efternamn " Canvas.Left="505" Canvas.Top="118" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
-                        <TextBox x:Name="tbLastNamne" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="124" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="4" />
-                        <Label x:Name="lbSSN" Content="Personnummer " Canvas.Left="505" Canvas.Top="59" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
-                        <TextBox x:Name="tbSsn" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="65" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="2"/>
-                        <Label x:Name="lbEmail" Content="E-post " Canvas.Left="505" Canvas.Top="147" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.45,-0.379" FontFamily="Myriad Pro"/>
-                        <TextBox x:Name="tbEmail" Height="23" Canvas.Left="629" TextWrapping="Wrap" Text="" Canvas.Top="153" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="5"/>
-                        <Button x:Name="btnUpdateInfo" Content="Uppdatera" Canvas.Left="629" Canvas.Top="219" Width="120" Click="btnUpdateInfo_Click" Background="Black" Foreground="White" TabIndex="26"/>
-                        <Button x:Name="btnClear" Content="Rensa" Canvas.Left="505" Canvas.Top="240" Width="123" Background="Black" Foreground="White" TabIndex="27"/>
-                        <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="629" Canvas.Top="240" Width="120" Click="btnInactive_Click" Foreground="White" Background="Black" TabIndex="28"/>
-                        <TextBox x:Name="tbPassword" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="5" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="1"/>
-                        <TextBox x:Name="tbUsername" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="1" IsTabStop="False" Canvas.Top="-24"/>
+                        <Label x:Name="lbFirstName" Content="Förnamn" Canvas.Left="505" Canvas.Top="122" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
+                        <TextBox x:Name="tbFirstName" Height="22" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="130" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" RenderTransformOrigin="0.505,-3.09" TabIndex="3"/>
+                        <Label x:Name="lbLastName" Content="Efternamn " Canvas.Left="505" Canvas.Top="153" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
+                        <TextBox x:Name="tbLastNamne" Height="22" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="160" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="4" />
+                        <Label x:Name="lbSSN" Content="Personnummer " Canvas.Left="505" Canvas.Top="94" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
+                        <TextBox x:Name="tbSsn" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="100" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="2"/>
+                        <Label x:Name="lbEmail" Content="E-post " Canvas.Left="505" Canvas.Top="182" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.45,-0.379" FontFamily="Myriad Pro"/>
+                        <TextBox x:Name="tbEmail" Height="23" Canvas.Left="629" TextWrapping="Wrap" Text="" Canvas.Top="188" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="5"/>
+                        <Button x:Name="btnUpdateInfo" Content="Uppdatera" Canvas.Left="629" Canvas.Top="254" Width="120" Click="btnUpdateInfo_Click" Background="Black" Foreground="White" TabIndex="26"/>
+                        <Button x:Name="btnClear" Content="Rensa" Canvas.Left="505" Canvas.Top="275" Width="123" Background="Black" Foreground="White" TabIndex="27"/>
+                        <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="629" Canvas.Top="275" Width="120" Click="btnInactive_Click" Foreground="White" Background="Black" TabIndex="28"/>
+                        <TextBox x:Name="tbPassword" Height="22" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="41" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="1"/>
+                        <TextBox x:Name="tbUsername" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="1" IsTabStop="False" Canvas.Top="11"/>
                         <Label x:Name="lbSentInReports" Content="Rapporter" Canvas.Left="10" Canvas.Top="210" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
-                        <Button x:Name="btnShowPDF" Content="Visa PDF" Canvas.Left="504" Canvas.Top="279" Width="244" RenderTransformOrigin="0.5,0.5" Foreground="White" Background="Black" Height="20" TabIndex="29" Click="btnShowPDF_Click">
+                        <Button x:Name="btnShowPDF" Content="Visa PDF" Canvas.Left="504" Canvas.Top="314" Width="244" RenderTransformOrigin="0.5,0.5" Foreground="White" Background="Black" Height="20" TabIndex="29" Click="btnShowPDF_Click">
                             <Button.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
@@ -156,17 +156,17 @@
                                 </TransformGroup>
                             </Button.RenderTransform>
                         </Button>
-                        <Button x:Name="btnApprove" Content="Godkänn Rapport" Canvas.Left="505" Canvas.Top="300" Width="244" Background="Black" Foreground="White" Height="38" TabIndex="30" Click="btnApprove_Click"/>
-                        <Button x:Name="btnDeny" Content="Neka Rapport" Canvas.Left="650" Canvas.Top="447" Width="99" Foreground="White" Background="Black" RenderTransformOrigin="0.483,-0.8" Height="23" TabIndex="32" Click="btnDeny_Click"/>
-                        <TextBox x:Name="tbWhyDenied" Height="76" Canvas.Left="505" TextWrapping="Wrap" Text="" Canvas.Top="368" Width="244" Background="Black" Foreground="White" TabIndex="16"/>
-                        <Label x:Name="lbWhyDenied" Content="Motvering till nekande" Canvas.Left="501" Canvas.Top="343" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                        <Button x:Name="btnApprove" Content="Godkänn Rapport" Canvas.Left="505" Canvas.Top="340" Width="244" Background="Black" Foreground="White" Height="38" TabIndex="30" Click="btnApprove_Click"/>
+                        <Button x:Name="btnDeny" Content="Neka Rapport" Canvas.Left="650" Canvas.Top="486" Width="99" Foreground="White" Background="Black" RenderTransformOrigin="0.483,-0.8" Height="22" TabIndex="32" Click="btnDeny_Click"/>
+                        <TextBox x:Name="tbWhyDenied" Height="76" Canvas.Left="505" TextWrapping="Wrap" Text="" Canvas.Top="400" Width="244" Background="Black" Foreground="White" TabIndex="16"/>
+                        <Label x:Name="lbWhyDenied" Content="Motvering till nekande" Canvas.Left="501" Canvas.Top="378" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <Label Content="Sortering" Canvas.Left="14" Canvas.Top="186" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                         <Button x:Name="btnShowReports" Content="Visa Rapporter" Canvas.Left="305" Canvas.Top="449" Width="107" Background="Black" Foreground="White" Height="23" TabIndex="31" Click="btnShowReports_Click"/>
                         <TextBox x:Name="tbSearchUser" Height="23" Canvas.Left="14" TextWrapping="Wrap" Text="" Canvas.Top="152" Width="294" Background="Black" Foreground="White" TabIndex="8"/>
                         <Button x:Name="btnSearchUser1" Content="Sök" Canvas.Left="313" Canvas.Top="152" Width="99" Background="Black" Foreground="White" Height="23" Click="btnSearchUser1_Click"/>
-                        <TextBox x:Name="tbBoss" Height="23" Canvas.Left="629" TextWrapping="Wrap" Text="" Canvas.Top="181" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="6"/>
-                        <Label x:Name="lbUserID" Content="Anst. nr" Canvas.Left="505" Canvas.Top="28" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
-                        <TextBox x:Name="tbUserID" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="34" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" IsTabStop="False"/>
+                        <TextBox x:Name="tbBoss" Height="22" Canvas.Left="629" TextWrapping="Wrap" Text="" Canvas.Top="217" Width="120" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" TabIndex="6"/>
+                        <Label x:Name="lbUserID" Content="Anst. nr" Canvas.Left="505" Canvas.Top="63" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" FontFamily="Myriad Pro"/>
+                        <TextBox x:Name="tbUserID" Height="23" Canvas.Left="628" TextWrapping="Wrap" Text="" Canvas.Top="69" Width="121" Background="Black" Foreground="White" SelectionBrush="#FF4375A6" IsTabStop="False"/>
                         <ListBox x:Name="listBoxUsers" Height="166" Width="398" Canvas.Left="14" Background="Black" Foreground="White" Canvas.Top="-19" IsTabStop="True" TabIndex="7" SelectionChanged="listBoxUsers_SelectionChanged_1"/>
                         <ListView x:Name="lvCountriesEdit" Height="402" Canvas.Left="843" Canvas.Top="-30" Width="326" RenderTransformOrigin="-2.41,0.58" Background="Black" TabIndex="12" SelectionChanged="lvCountriesEdit_SelectionChanged_1" Foreground="White">
                             <ListView.View>
@@ -195,6 +195,8 @@
                         <ComboBox x:Name="cbSortReports" Width="120" Canvas.Left="103" Canvas.Top="213" SelectionChanged="cbSortReports_SelectionChanged"/>
                         <RadioButton x:Name="rbSortDate" Content="Datum" Canvas.Left="88" Canvas.Top="192" Width="69" GroupName="rbSort" Checked="rbSortDate_Checked" Foreground="White"/>
                         <RadioButton x:Name="rbSortName" Content="Namn" Canvas.Left="157" Canvas.Top="192" GroupName="rbSort" Checked="rbSortName_Checked" Foreground="White"/>
+                        <CheckBox x:Name="cbwanttoadd" Content="Jag vill lägga till en anv." Canvas.Left="505" Canvas.Top="-42" Foreground="White" Background="White" FontWeight="Bold" FontSize="14" TabIndex="22" Checked="cbwanttoadd_Checked"/>
+                        <CheckBox x:Name="cbwanttoupdate" Content="Jag vill uppdatera en anv." Canvas.Left="505" Canvas.Top="-21" Foreground="White" Background="White" FontWeight="Bold" FontSize="14" TabIndex="22" Checked="cbwanttoupdate_Checked"/>
 
                     </Canvas>
                 </TabItem>
