--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -40,14 +40,14 @@
                 </TabControl.OpacityMask>
                 <TabItem Header="Rapportering" Margin="-2,0,-100,1" Background="#FFADBEE4" Foreground="Black" BorderBrush="{x:Null}" FontSize="14" FontWeight="Bold" FontFamily="Myriad Pro">
                     <Canvas Margin="13,28,9,140">
-                        <DatePicker x:Name="dpStartDate" Canvas.Left="191" Canvas.Top="-9" Width="119" Height="27" Background="Black" IsTabStop="True" TabIndex="3"/>
+                        <DatePicker x:Name="dpStartDate" Canvas.Left="172" Canvas.Top="-7" Width="119" Height="27" Background="Black" IsTabStop="True" TabIndex="3"/>
                         <Label x:Name="lbStartDate" Content="Välj start/slutdatum                            " Canvas.Top="-9" Width="167" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Label x:Name="lbCarTripLength" Content="Lägg till bilresa" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="1" Canvas.Top="133" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Label x:Name="lbLand" Content="Välj land" Canvas.Left="231" Canvas.Top="164" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <TextBox x:Name="TbCarTripLengthKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="74" Width="102" Background="Black" Foreground="White"/>
-                        <Label x:Name="lbWhatHaveIDoneToday" Content="Kort resebeskrivning" Canvas.Left="434" Canvas.Top="61" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="Myriad Pro"/>
-                        <TextBox x:Name="tbDoneOnTrip" Height="133" Canvas.Left="435" TextWrapping="Wrap" Text="" Canvas.Top="87" Width="390" Background="Black" Foreground="White"/>
+                        <Label x:Name="lbWhatHaveIDoneToday" Content="Kort resebeskrivning" Canvas.Left="434" Canvas.Top="18" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="Myriad Pro"/>
+                        <TextBox x:Name="tbDoneOnTrip" Height="173" Canvas.Left="435" TextWrapping="Wrap" Text="" Canvas.Top="47" Width="390" Background="Black" Foreground="White"/>
                         <ComboBox x:Name="CbCountries" Canvas.Left="234" Canvas.Top="191" Width="172" SelectionChanged="CbCountries_SelectionChanged" Height="25"/>
                         <Button x:Name="BtnSaveReceipt" Content="Spara Kvitto                             " Canvas.Left="737" Canvas.Top="508" Width="88" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Padding="5,1,1,1" Click="Button_Click_1" Height="21"/>
                         <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Top="243" Width="64" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Click="btnUploadReceipt_Click" RenderTransformOrigin="0.566,-2.278" Canvas.Left="761" Height="23"/>
@@ -64,22 +64,22 @@
                         </TextBox>
                         <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto                             " Canvas.Left="434" Canvas.Top="508" Width="89" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="#FFCBCBCB" Foreground="White" Background="Black" Click="btnRemoveSelectedReceipt_Click" Height="21"/>
                         <Label Content="Välj kvitto/belopp                        " Canvas.Top="237" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16" Width="174" Canvas.Left="434" FontFamily="Myriad Pro"/>
-                        <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="963" Canvas.Top="486" Width="264" BorderBrush="#FFCBCBCB" Foreground="White" Height="43" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="Black" FontFamily="Myriad Pro"/>
+                        <Button x:Name="btnSendReport" Content="Skicka in din rapport                          " Canvas.Left="953" Canvas.Top="514" Width="264" BorderBrush="#FFCBCBCB" Foreground="White" Height="43" Click="btnSendReport_Click" Padding="15,1,1,1" FontSize="24" FontWeight="Bold" Margin="0" Background="Black" FontFamily="Myriad Pro"/>
                         <Label Content="Maxbelopp" Canvas.Left="231" Canvas.Top="214" Width="200" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
                         <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="236" Canvas.Top="275" Width="93" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Height="20" Click="btnSaveStartCountry_Click" RenderTransformOrigin="0.575,0.45"/>
                         <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="236" Canvas.Top="241" RenderTransformOrigin="1.556,2.432" Width="93"/>
-                        <TextBox x:Name="tbNotes" Height="338" Canvas.Left="852" TextWrapping="Wrap" Text="" Canvas.Top="87" Width="365" Background="Black" Foreground="White"/>
-                        <Label x:Name="lblNotes" Content="Fria anteckningar" Canvas.Left="851" Canvas.Top="61" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
-                        <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="1070" Canvas.Top="432" Width="147" Foreground="White" FontFamily="Myriad Pro" Background="Black" BorderBrush="{x:Null}" Click="btnLoadNotes_Click" Height="21"/>
-                        <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="1070" Canvas.Top="430" Width="147" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Click="btnSaveNotes_Click" Height="22"/>
+                        <TextBox x:Name="tbNotes" Height="338" Canvas.Left="852" TextWrapping="Wrap" Text="" Canvas.Top="123" Width="365" Background="Black" Foreground="White"/>
+                        <Label x:Name="lblNotes" Content="Fria anteckningar" Canvas.Left="851" Canvas.Top="98" Foreground="White" FontWeight="Bold" FontSize="16" FontFamily="Myriad Pro"/>
+                        <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="1070" Canvas.Top="468" Width="147" Foreground="White" FontFamily="Myriad Pro" Background="Black" BorderBrush="{x:Null}" Click="btnLoadNotes_Click" Height="21"/>
+                        <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="1070" Canvas.Top="468" Width="147" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Click="btnSaveNotes_Click" Height="22"/>
                         <Button x:Name="btnUpdateTotalDriven" Content="Lägg till" Canvas.Left="279" Canvas.Top="74" Width="81" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click" Height="23"/>
                         <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Top="432" Width="89" FontFamily="Myriad Pro" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" Height="20" Click="btnDeleteCountry_Click"/>
                         <Label Content="            " Canvas.Left="236" Canvas.Top="241" Width="93" x:Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16" Background="#FF5F93AC" Height="27"/>
-                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="191" Canvas.Top="25" Width="172" Click="btnUpdateList_Click" Background="Black" Foreground="White" Height="23" BorderBrush="#FFCBCBCB" FontFamily="Myriad Pro"/>
+                        <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="172" Canvas.Top="25" Width="172" Click="btnUpdateList_Click" Background="Black" Foreground="White" Height="23" BorderBrush="#FFCBCBCB" FontFamily="Myriad Pro"/>
                         <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="172" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102" Foreground="White" Background="#FF4F6C89"/>
                         <Label x:Name="LbKm" Content="" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
                         <Label x:Name="LbTotalKm" Content="Sammanlagd sträcka" Canvas.Left="1" Canvas.Top="97" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="Myriad Pro"/>
-                        <DatePicker x:Name="dpEndDate" Canvas.Left="309" Canvas.Top="-8" RenderTransformOrigin="0.5,0.5" Width="126" TabIndex="4">
+                        <DatePicker x:Name="dpEndDate" Canvas.Left="294" Canvas.Top="-5" RenderTransformOrigin="0.5,0.5" Width="126" TabIndex="4">
                             <DatePicker.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
@@ -96,13 +96,14 @@
                         <Button x:Name="BtnLogIn" Content="Logga In" Canvas.Left="1074" Canvas.Top="23" Width="143" Foreground="White" Background="Black" Click="BtnLogIn_Click" Height="25" TabIndex="1" BorderBrush="#FFCBCBCB" FontFamily="Myriad Pro"/>
                         <Button x:Name="btnLogOut" Content="Logga ut" Canvas.Left="1074" Canvas.Top="26" Width="143" Background="Black" Foreground="White" Visibility="Hidden" Click="btnLogOut_Click"/>
                         <Button x:Name="btnForgotPassword" Content="Glömt Lösenord" Canvas.Left="926" Canvas.Top="23" Width="134" Background="Black" Foreground="White" Height="25" TabIndex="2" Click="btnForgotPassword_Click" BorderBrush="#FFCBCBCB" FontFamily="Myriad Pro"/>
-                        <Button x:Name="btnDeleteDraft" Content="Rensa Utkast" Height="41" Width="241" Canvas.Top="488" Background="Black" Click="btnDeleteDraft_Click" Foreground="White" BorderBrush="#FFCBCBCB" FontSize="24" FontFamily="Myriad Pro"/>
+                        <Button x:Name="btnDeleteDraft" Content="Rensa Utkast" Height="43" Width="211" Canvas.Top="514" Background="Black" Click="btnDeleteDraft_Click" Foreground="White" BorderBrush="#FFCBCBCB" FontSize="24" FontFamily="Myriad Pro" Canvas.Left="1"/>
                         <CheckBox x:Name="CHBVacationday" Content="Ledig" Canvas.Left="236" Canvas.Top="300" RenderTransformOrigin="0.155,-0.438" Background="White" Foreground="White"/>
                         <CheckBox x:Name="CHBBreakfast" Content="Frukost" Canvas.Left="236" Canvas.Top="321" Background="White" Foreground="White"/>
                         <CheckBox x:Name="CHBLunch" Content="Lunch" Canvas.Left="236" Canvas.Top="342" Background="White" Foreground="White"/>
                         <CheckBox x:Name="CHBDinner" Content="Middag" Canvas.Left="236" Canvas.Top="363" Background="White" Foreground="White"/>
                         <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="66" TextWrapping="Wrap" Text="TextBox" Canvas.Top="25" Width="120" Visibility="Hidden"/>
                         <TextBox x:Name="tbTotalRecieptAmount" Height="23" Canvas.Left="663" TextWrapping="Wrap" Text="0" Canvas.Top="534" Width="120" IsEnabled="False"/>
+                        <Button x:Name="btnShowMyReports" Content="Visa mina rapporter" Height="32" Width="291" Background="Black" Foreground="White" BorderBrush="#FFCBCBCB" FontSize="18" FontFamily="Myriad Pro" Canvas.Left="926" Click="btnShowMyReports_Click" Canvas.Top="52"/>
 
 
                     </Canvas>
