--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -202,7 +202,7 @@
 
                     </Canvas>
                 </TabItem>
-                <TabItem Header="Valutakonverterare&#xA;" Height="63" VerticalAlignment="Bottom" Margin="99,-1,-121,1" Padding="6,12,6,2" FontSize="14" FontWeight="Bold" BorderBrush="{x:Null}" Background="#FF96A9D3" FontFamily="Myriad Pro">
+                <TabItem Header="Valutakonverterare&#xA;" Height="63" VerticalAlignment="Bottom" Margin="99,-1,-143,1" Padding="6,12,6,2" FontSize="14" FontWeight="Bold" BorderBrush="{x:Null}" Background="#FF96A9D3" FontFamily="Myriad Pro">
                     <Grid x:Name="MainWindowCurrency" Margin="0">
                         <Grid.Background>
                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -235,7 +235,7 @@
                         <DatePicker x:Name="DPdate" HorizontalAlignment="Left" Margin="163,139,0,0" VerticalAlignment="Top"/>
                     </Grid>
                 </TabItem>
-                <TabItem Header="Statistik&#xD;&#xA;" HorizontalAlignment="Left" Height="61" VerticalAlignment="Top" Width="183" Margin="121,0,-121,0" FontFamily="Myriad Pro" FontSize="14" FontWeight="Bold" Background="#FF6688D1" BorderBrush="{x:Null}">
+                <TabItem Header="Statistik&#xD;&#xA;" HorizontalAlignment="Left" Height="61" VerticalAlignment="Top" Width="183" Margin="145,0,-145,0" FontFamily="Myriad Pro" FontSize="14" FontWeight="Bold" Background="#FF6688D1" BorderBrush="{x:Null}" Padding="6,15,6,2">
                     <Grid x:Name="Statistik" Margin="0,-10,-0.4,9.6">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="539*"/>
