Fixat Emils fula statistikgränssnitt

--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -216,7 +216,7 @@
                         </Grid.ColumnDefinitions>
                         <ComboBox x:Name="CbFromCurrency" HorizontalAlignment="Left" Margin="127,18,0,0" VerticalAlignment="Top" Width="154" SelectionChanged="CbFromCurrency_SelectionChanged" TabIndex="1"/>
                         <ComboBox x:Name="CbToCurrency" HorizontalAlignment="Left" Margin="128,56,0,0" VerticalAlignment="Top" Width="153" SelectionChanged="CbToCurrency_SelectionChanged" TabIndex="2"/>
-                        <Button x:Name="BtnConvert" Content="Konvertera&#xA;" HorizontalAlignment="Left" Margin="352,141,0,0" VerticalAlignment="Top" Width="98" Click="BtnConvert_Click" Height="26" TabIndex="4" Foreground="White" FontSize="14" BorderBrush="White" Padding="1">
+                        <Button x:Name="BtnConvert" Content="Konvertera&#xA;" HorizontalAlignment="Left" Margin="183,287,0,0" VerticalAlignment="Top" Width="98" Click="BtnConvert_Click" Height="26" TabIndex="4" Foreground="White" FontSize="14" BorderBrush="White" Padding="1,4,1,1">
                             <Button.Background>
                                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                     <GradientStop Color="Black" Offset="0"/>
@@ -236,7 +236,7 @@
                     </Grid>
                 </TabItem>
                 <TabItem Header="Statistik&#xD;&#xA;" HorizontalAlignment="Left" Height="61" VerticalAlignment="Top" Width="183" Margin="145,0,-145,0" FontFamily="Myriad Pro" FontSize="14" FontWeight="Bold" Background="#FF6688D1" BorderBrush="{x:Null}" Padding="6,15,6,2">
-                    <Grid x:Name="Statistik" Margin="0,-10,-0.4,9.6">
+                    <Grid x:Name="Statistik" Margin="0,-2,0,2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="539*"/>
                             <ColumnDefinition Width="736*"/>
@@ -247,24 +247,24 @@
                                 <GradientStop Color="#FF6CB6E8" Offset="1"/>
                             </LinearGradientBrush>
                         </Grid.Background>
-                        <Label x:Name="lbTotalKilometer" Content="Antal Kilometer: " HorizontalAlignment="Left" Margin="31,516,0,0" VerticalAlignment="Top" Foreground="White" Grid.Column="1"/>
-                        <ComboBox x:Name="cbAllCountriesStatistics" HorizontalAlignment="Left" Margin="343,27,0,0" VerticalAlignment="Top" Width="196" Grid.Column="1" SelectionChanged="cbAllCountriesStatistics_SelectionChanged_1"/>
-                        <ComboBox x:Name="cbAllUsers" HorizontalAlignment="Left" Margin="31,27,0,0" VerticalAlignment="Top" Width="168" Grid.Column="1" SelectionChanged="cbAllUsers_SelectionChanged"/>
-                        <Label x:Name="lbSelectUser" Content="Välj Användare" HorizontalAlignment="Left" Margin="31,55,0,0" VerticalAlignment="Top" Foreground="White" Grid.Column="1"/>
-                        <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="343,55,0,0" VerticalAlignment="Top" Foreground="White" Width="90" Grid.Column="1"/>
-                        <ListBox x:Name="lbReports" HorizontalAlignment="Left" Height="229" Margin="209,82,0,0" VerticalAlignment="Top" Width="291" Background="#FF0C0B0B" Foreground="White" BorderBrush="#FFC5C5C7"/>
-                        <Label x:Name="lbSelectReport" Content="Rapporter" HorizontalAlignment="Left" Margin="283,37,0,0" VerticalAlignment="Top" Foreground="White"/>
-                        <Label x:Name="lbDateChoose" Content="Välj datum du vill se statistik över" HorizontalAlignment="Left" Margin="346,319,0,0" VerticalAlignment="Top" Foreground="White" Grid.Column="1"/>
-                        <Label x:Name="lbCash" Content="Total Summa:" HorizontalAlignment="Left" Margin="40,543,0,0" VerticalAlignment="Top" Foreground="White" Grid.Column="1"/>
-                        <ListBox x:Name="lbUserStatisic" HorizontalAlignment="Left" Height="229" Margin="31,82,0,0" VerticalAlignment="Top" Width="291" Background="#FF0C0B0B" Foreground="White" BorderBrush="#FFC5C5C7" Grid.Column="1"/>
-                        <ListBox x:Name="lbCountriesStatistic" HorizontalAlignment="Left" Height="229" Margin="343,82,0,0" VerticalAlignment="Top" Width="291" Background="#FF0F0F0F" Foreground="White" BorderBrush="#FFC5C5C7" Grid.Column="1"/>
-                        <TextBlock x:Name="tbKmStatistics" HorizontalAlignment="Left" Margin="145,521,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Grid.Column="1"/>
-                        <TextBlock x:Name="tbTotalSumMoneyStatistics" HorizontalAlignment="Left" Margin="145,548,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Grid.Column="1"/>
-                        <DatePicker x:Name="dpStatisticsStartDate" HorizontalAlignment="Left" Margin="474,351,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                        <DatePicker x:Name="dpStatisticsEndDate" HorizontalAlignment="Left" Margin="474,376,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                        <Label x:Name="lbStatisticsStartDate" Content="Startdatum" HorizontalAlignment="Left" Margin="384,349,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="#FF0DFB18" Grid.Column="1"/>
-                        <Label x:Name="lbStatisticsEndDate" Content="Slutdatum" HorizontalAlignment="Left" Margin="390,376,0,0" VerticalAlignment="Top" Width="79" Background="{x:Null}" Foreground="#FF12FB07" Grid.Column="1"/>
-                        <Button x:Name="btnFilterByDate" Content="Sortera efter datum" HorizontalAlignment="Left" Margin="428,403,0,0" VerticalAlignment="Top" Width="149" Grid.Column="1" Click="btnFilterByDate_Click"/>
+                        <Label x:Name="lbTotalKilometer" Content="Antal Kilometer: " HorizontalAlignment="Left" Margin="96,306,0,0" VerticalAlignment="Top" Foreground="White" Grid.Column="1"/>
+                        <ComboBox x:Name="cbAllCountriesStatistics" HorizontalAlignment="Left" Margin="167,45,0,0" VerticalAlignment="Top" Width="220" Grid.Column="1" SelectionChanged="cbAllCountriesStatistics_SelectionChanged_1"/>
+                        <ComboBox x:Name="cbAllUsers" HorizontalAlignment="Left" Margin="449,45,0,0" VerticalAlignment="Top" Width="181" SelectionChanged="cbAllUsers_SelectionChanged" Grid.ColumnSpan="2"/>
+                        <Label x:Name="lbSelectUser" Content="Välj Användare" HorizontalAlignment="Left" Margin="339,45,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <Label x:Name="lbSelectCountry" Content="Välj Land" HorizontalAlignment="Left" Margin="96,45,0,0" VerticalAlignment="Top" Foreground="White" Width="90" Grid.Column="1"/>
+                        <ListBox x:Name="lbReports" HorizontalAlignment="Left" Height="229" Margin="43,72,0,0" VerticalAlignment="Top" Width="291" Background="#FF0C0B0B" Foreground="White" BorderBrush="#FFC5C5C7"/>
+                        <Label x:Name="lbSelectReport" Content="Rapporter" HorizontalAlignment="Left" Margin="43,45,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <Label x:Name="lbDateChoose" Content="Välj datum du vill se statistik över" HorizontalAlignment="Left" Margin="43,327,0,0" VerticalAlignment="Top" Foreground="White"/>
+                        <Label x:Name="lbCash" Content="Total Summa:" HorizontalAlignment="Left" Margin="96,327,0,0" VerticalAlignment="Top" Foreground="White" Grid.Column="1"/>
+                        <ListBox x:Name="lbUserStatisic" HorizontalAlignment="Left" Height="229" Margin="339,72,0,0" VerticalAlignment="Top" Width="291" Background="#FF0C0B0B" Foreground="White" BorderBrush="#FFC5C5C7" Grid.ColumnSpan="2"/>
+                        <ListBox x:Name="lbCountriesStatistic" HorizontalAlignment="Left" Height="229" Margin="96,72,0,0" VerticalAlignment="Top" Width="291" Background="#FF0F0F0F" Foreground="White" BorderBrush="#FFC5C5C7" Grid.Column="1"/>
+                        <TextBlock x:Name="tbKmStatistics" HorizontalAlignment="Left" Margin="210,311,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Grid.Column="1" Foreground="White"/>
+                        <TextBlock x:Name="tbTotalSumMoneyStatistics" HorizontalAlignment="Left" Margin="210,332,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Grid.Column="1" Foreground="White"/>
+                        <DatePicker x:Name="dpStatisticsStartDate" HorizontalAlignment="Left" Margin="130,353,0,0" VerticalAlignment="Top" Width="131"/>
+                        <DatePicker x:Name="dpStatisticsEndDate" HorizontalAlignment="Left" Margin="130,378,0,0" VerticalAlignment="Top" Width="131"/>
+                        <Label x:Name="lbStatisticsStartDate" Content="Startdatum" HorizontalAlignment="Left" Margin="43,351,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="White"/>
+                        <Label x:Name="lbStatisticsEndDate" Content="Slutdatum" HorizontalAlignment="Left" Margin="43,376,0,0" VerticalAlignment="Top" Width="79" Background="{x:Null}" Foreground="White"/>
+                        <Button x:Name="btnFilterByDate" Content="Sortera efter datum" HorizontalAlignment="Left" Margin="130,408,0,0" VerticalAlignment="Top" Width="131" Click="btnFilterByDate_Click" Background="Black" Foreground="White"/>
                     </Grid>
                 </TabItem>
             </TabControl>
